plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'hongik'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation("org.springframework.boot:spring-boot-starter-validation:3.4.4")
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// AI
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
	// Replace the following with the starter dependencies of specific modules you wish to use
	implementation 'org.springframework.ai:spring-ai-openai'
	implementation 'org.springframework.ai:spring-ai-client-chat'




	// https://mvnrepository.com/artifact/org.springframework/spring-webmvc
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'



	//Webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'


	// MySQL Connector
	implementation("com.mysql:mysql-connector-j:9.2.0")

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Google Cloud Vision
	implementation 'com.google.cloud:google-cloud-vision:3.61.0'

	// Google cloud speech
	implementation 'com.google.cloud:google-cloud-speech:4.39.0'

	//Google API


	// Logstash Logback Encoder
	implementation("net.logstash.logback:logstash-logback-encoder:8.0")
}

tasks.named('test') {
	useJUnitPlatform()
}
